[edit] edited some logic concepts in the controller